fix horizontal overflow issue in portfolio section

--- a/src/components/HomePage/PortfolioSection/style.scss
+++ b/src/components/HomePage/PortfolioSection/style.scss
@@ -24,7 +24,6 @@ section.portfolio {
       .item {
         max-height: 540px;
         height: 100%;
-        width: 100%;
 
         position: relative;
 
